objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>FAE_last_modified_by_CP3__c</fullName>
        <label>FAE last modified by</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab_Assignment_1__c</fullName>
        <inlineHelpText>This is the target GLOBALFOUNDRIES Fab for production.</inlineHelpText>
        <label>Primary GF Fab</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Process_Geometry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>FAB 6S</fullName>
                </value>
                <value>
                    <fullName>FAB 10</fullName>
                </value>
                <value>
                    <fullName>FAB 11</fullName>
                </value>
                <value>
                    <fullName>ALTIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fab_Assignment_2__c</fullName>
        <inlineHelpText>Identify the secondary GLOBALFOUNDRIES Fab is the program will be support across multiple GLOBALFOUNDRIES Fabs.</inlineHelpText>
        <label>Secondary GF Fab</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Process_Geometry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>FAB 6S</fullName>
                </value>
                <value>
                    <fullName>FAB 10</fullName>
                </value>
                <value>
                    <fullName>FAB 11</fullName>
                </value>
                <value>
                    <fullName>ALTIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fab_Group__c</fullName>
        <formula>CASE(TEXT( Fab_Assignment_1__c ),
&quot;FAB 2&quot;, &quot;Singapore 200mm&quot;,
&quot;FAB 3&quot;,&quot;Singapore 200mm&quot;,
&quot;FAB 3E&quot;,&quot;Singapore 200mm&quot;,
&quot;FAB 5&quot;,&quot;Singapore 200mm&quot;,
&quot;FAB 6&quot;,&quot;Singapore 200mm&quot;,
&quot;FAB 6S&quot;,&quot;Singapore 200mm&quot;,
&quot;FAB 7&quot;,&quot;Singapore 300mm&quot;,
&quot;FAB 1&quot;,&quot;Dresden 300mm&quot;,
&quot;FAB 9&quot;,&quot;Burlington 200mm&quot;,
&quot;FAB 10&quot;,&quot;East Fishkill 300mm&quot;, 
&quot;FAB 11&quot;,&quot;China 300mm&quot;, 
&quot;ALTIS&quot;,&quot;Altis 200mm&quot;, 
&quot;FAB 8&quot;,&quot;Malta 300mm&quot;,&apos;&apos;)</formula>
        <label>Fab Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab_Split_2_100_Fab_Split1__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Fab Split 2 (100% - Fab Split1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fab_Split__c</fullName>
        <defaultValue>1.00</defaultValue>
        <inlineHelpText>If the opportunity production is limited to a single GLOBALFOUNDRIES fab, then leave at 100%</inlineHelpText>
        <label>Primary GF Fab Production Split</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Finance_Check_CP2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance: System Consistency Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Check_CP3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance: System Consistency Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Product_Production_Date_FQ_1__c</fullName>
        <description>This field is populated from apex trigger and referenced by the First_Product_Production_Date_FQ__c field. This is a temporary fix and quarter generation should be based on the standard FiscalYear.</description>
        <label>First Product Production Date (FQ)1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Product_Production_Date_FQ__c</fullName>
        <formula>First_Product_Production_Date_FQ_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Product Production Date (FQ)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GF_Opportunity_Size__c</fullName>
        <formula>Total_Program_Value__c  *  GF_Target_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the calculated SOM (Serviceable Obtainable Market). This is the opportunity size for GLOBALFOUNDRIES. Calculation is Total Program Value X GF Target Share. This value is also used for the Total Lifetime Revenue, if Quarterly Value is not entered.</inlineHelpText>
        <label>GF Opportunity Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GF_Target_Share_Score__c</fullName>
        <formula>IF(GF_Target_Share__c  &gt; 0, 0.05, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GF Target Share % Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GF_Target_Share__c</fullName>
        <inlineHelpText>Also known as SOM (Serviceable Obtainable Market). Enter the target share of the program that GLOBALFOUNDRIES is pursuing. The Total Program Value X GF Target Share = GF Opportunity Size. This is a required field prior to submission for Design Win Award.</inlineHelpText>
        <label>GF Target Share % (DW)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GMPL_Opportunity_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please select an approved GMPL associated to this opportunity. 
-GMPL record type should be at least PC1 approved 
-BX009 record type should be at least in BRB Approved</description>
        <inlineHelpText>For Non Baseline Process Platform: Please select an approved GMPL associated to this opportunity for DW submission.
-GMPL record type should be at least PC1 approved 
-BX009 record type should be at least in BRB Approved</inlineHelpText>
        <label>Approved GMPL(DW)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR (2 AND 3)) AND 4</booleanFilter>
            <errorMessage>Please select an approved GMPL associated to this opportunity.
-GMPL record type should be at least PC1 approved
-BX009 record type should be at least in BRB Approved</errorMessage>
            <filterItems>
                <field>GMPL_Opportunity__c.GMPL_BX009__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>BX009 BRB Approved</value>
            </filterItems>
            <filterItems>
                <field>GMPL_Opportunity__c.GMPL_BX009__r.PLC_Next_Gate__c</field>
                <operation>equals</operation>
                <value>PC2, PCR, PLR, PRR</value>
            </filterItems>
            <filterItems>
                <field>GMPL_Opportunity__c.GMPL_BX009__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>GMPL</value>
            </filterItems>
            <filterItems>
                <field>GMPL_Opportunity__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <infoMessage>Please select an approved GMPL associated to this opportunity. Please search by GMPL*
-GMPL record type should be at least PC1 approved
-BX009 record type should be at least in BRB Approved</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GMPL_Opportunity__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geometry_Requested_by_Customer__c</fullName>
        <inlineHelpText>Identify the Process Geometry that is being requested by the Customer</inlineHelpText>
        <label>Geometry Requested by Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.003UM</fullName>
                </value>
                <value>
                    <fullName>0.014UM</fullName>
                </value>
                <value>
                    <fullName>0.020UM</fullName>
                </value>
                <value>
                    <fullName>0.022UM</fullName>
                </value>
                <value>
                    <fullName>0.028UM</fullName>
                </value>
                <value>
                    <fullName>0.032UM</fullName>
                </value>
                <value>
                    <fullName>0.040UM</fullName>
                </value>
                <value>
                    <fullName>0.045UM</fullName>
                </value>
                <value>
                    <fullName>0.055UM</fullName>
                </value>
                <value>
                    <fullName>0.060UM</fullName>
                </value>
                <value>
                    <fullName>0.065UM</fullName>
                </value>
                <value>
                    <fullName>0.09UM</fullName>
                </value>
                <value>
                    <fullName>0.11UM</fullName>
                </value>
                <value>
                    <fullName>0.13UM</fullName>
                </value>
                <value>
                    <fullName>0.14UM</fullName>
                </value>
                <value>
                    <fullName>0.153UM</fullName>
                </value>
                <value>
                    <fullName>0.15UM</fullName>
                </value>
                <value>
                    <fullName>0.16UM</fullName>
                </value>
                <value>
                    <fullName>0.17UM</fullName>
                </value>
                <value>
                    <fullName>0.18UM</fullName>
                </value>
                <value>
                    <fullName>0.20UM</fullName>
                </value>
                <value>
                    <fullName>0.22UM</fullName>
                </value>
                <value>
                    <fullName>0.25UM</fullName>
                </value>
                <value>
                    <fullName>0.30UM</fullName>
                </value>
                <value>
                    <fullName>0.32UM</fullName>
                </value>
                <value>
                    <fullName>0.35UM</fullName>
                </value>
                <value>
                    <fullName>0.45UM</fullName>
                </value>
                <value>
                    <fullName>0.50UM</fullName>
                </value>
                <value>
                    <fullName>0.60UM</fullName>
                </value>
                <value>
                    <fullName>0.70UM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Help_Required__c</fullName>
        <label>Help Required</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>High_End_Vol__c</fullName>
        <label>High End Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IBM_Opportunity_Stage__c</fullName>
        <label>IBM Opportunity Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBM_Partner_Account__c</fullName>
        <label>IBM Partner Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Base_Forecast1__c</fullName>
        <formula>IF(AND( Probability  &gt;= 0.26,  Create_Forecast_in_Demantra__c &lt;&gt; TRUE), TRUE, FALSE)</formula>
        <label>In Base Forecast?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactivate_Zero_Out_Forecast_in_Demantra__c</fullName>
        <formula>IF(ISPICKVAL(StageName, &quot;8. Lost&quot;) || ISPICKVAL(StageName, &quot;9. Dropped&quot;), &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactivate/Zero Out Forecast in Demantra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_PreDiscovery_in_Demand_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include PreDiscovery in Demand Forecast</description>
        <label>Include PreDiscovery in Demand Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Revenue__c</fullName>
        <description>Field created to store IBM information</description>
        <label>Include Revenue</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informal_Quote_Score__c</fullName>
        <formula>IF(AND(ISBLANK( Informal_Quote__c),ISBLANK(Quote__c),ISBLANK(Option__c)) , 0,0.10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Informal Quote Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Informal_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Informal Quote(DW)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please Select a Informal Quote with Category as Wafer</errorMessage>
            <filterItems>
                <field>Informal_Quote__c.Product_Category__c</field>
                <operation>equals</operation>
                <value>Wafer, Wafer MLR 2-1, Wafer MLR 4-1</value>
            </filterItems>
            <filterItems>
                <field>Informal_Quote__c.Budgetary_Quote_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>Informal_Quote__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Informal_Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiate_Deal_Grading__c</fullName>
        <formula>IF((Deal_Grading_Status__c == null || Deal_Grading_Status__c == &apos;&apos; || Deal_Grading_Status__c == &apos;Previously Approved&apos;) &amp;&amp; (ISPICKVAL(StageName, &apos;0.Pre-Discovery&apos;) || ISPICKVAL(StageName, &apos;1. Discovery&apos;) || ISPICKVAL(StageName, &apos;2. Assessment&apos;) || ISPICKVAL(StageName, &apos;3. Recommendation&apos;) || ISPICKVAL(StageName, &apos;4. Decision&apos;)),
  IF(ISPICKVAL(Product_Line__c, &apos;ASIC&apos;), HYPERLINK($Setup.DealGradingOpportunityLookupId__c.DealGradingObjectTypeId__c+&quot;/e?&quot;+$Setup.DealGradingOpportunityLookupId__c.OpportunityFieldId__c+&quot;=&quot;+Name+&quot;&amp;&quot;+$Setup.DealGradingOpportunityLookupId__c.OpportunityFieldId__c+&quot;_lkid=&quot;+Id+$Label.Deal_Grading_ASCI,IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;New Deal Grading&quot;),&quot;_self&quot;),
  IF(ISPICKVAL(Product_Line__c, &apos;SiPh&apos;), HYPERLINK($Setup.DealGradingOpportunityLookupId__c.DealGradingObjectTypeId__c+&quot;/e?&quot;+$Setup.DealGradingOpportunityLookupId__c.OpportunityFieldId__c+&quot;=&quot;+Name+&quot;&amp;&quot;+$Setup.DealGradingOpportunityLookupId__c.OpportunityFieldId__c+&quot;_lkid=&quot;+Id+$Label.Deal_Grading_SiPh,IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;New Deal Grading&quot;),&quot;_self&quot;),
  &apos;&apos;)
  ), &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiate Deal Grading</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Iot_Application__c</fullName>
        <label>Iot Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>End_Application_for_Opty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Smart Auto - Aftermarket</fullName>
                </value>
                <value>
                    <fullName>Smart Auto - Connected Car</fullName>
                </value>
                <value>
                    <fullName>Smart Body - Wearables</fullName>
                </value>
                <value>
                    <fullName>Smart Body - Medical Devices (non-FDA)</fullName>
                </value>
                <value>
                    <fullName>Smart Body - Exercise</fullName>
                </value>
                <value>
                    <fullName>Smart Home &amp; Devices - Control /Automation</fullName>
                </value>
                <value>
                    <fullName>Smart Home &amp; Devices - Home Security and safety</fullName>
                </value>
                <value>
                    <fullName>Smart Home &amp; Devices - Content and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Smart Home &amp; Devices - Others</fullName>
                </value>
                <value>
                    <fullName>Smart Cities - Buildings</fullName>
                </value>
                <value>
                    <fullName>Smart Cities - Security and safety</fullName>
                </value>
                <value>
                    <fullName>Smart Cities - Energy/Utilities</fullName>
                </value>
                <value>
                    <fullName>Smart Cities - Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Smart Cities - Environment</fullName>
                </value>
                <value>
                    <fullName>Smart Cities - Irrigation</fullName>
                </value>
                <value>
                    <fullName>Smart Business and Retail - ATM/PoS</fullName>
                </value>
                <value>
                    <fullName>Smart Business and Retail - Tags</fullName>
                </value>
                <value>
                    <fullName>Smart Business and Retail - Locks</fullName>
                </value>
                <value>
                    <fullName>Smart Business and Retail - Vending</fullName>
                </value>
                <value>
                    <fullName>Smart Business and Retail - Information</fullName>
                </value>
                <value>
                    <fullName>Smart Factory - Controllers/Automation</fullName>
                </value>
                <value>
                    <fullName>Smart Factory - Security</fullName>
                </value>
                <value>
                    <fullName>Smart Factory - Inspection</fullName>
                </value>
                <value>
                    <fullName>Smart Education - Interactive Display</fullName>
                </value>
                <value>
                    <fullName>Smart Education - IP Camera</fullName>
                </value>
                <value>
                    <fullName>Smart Education - Lab Equipment</fullName>
                </value>
                <value>
                    <fullName>Smart Education - Projectors</fullName>
                </value>
                <value>
                    <fullName>Smart Education - Robot</fullName>
                </value>
                <value>
                    <fullName>Smart Education - Security Equipment</fullName>
                </value>
                <value>
                    <fullName>Smart Education - Student Attendance Tracker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsFeedbackDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFeedbackDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GF_Committed_Score__c</fullName>
        <formula>IF(ISPICKVAL( Is_GF_Committed_to_Process__c, &quot;&quot; ), 0, 0.05)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is GF Committed Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_GF_Committed_to_Process__c</fullName>
        <inlineHelpText>Does GLOBALFOUNDRIES have the required process on the product roadmap or has there been approval to support the development work for the process if its required to make it available? This is a required field prior to submission for Design Win Award.</inlineHelpText>
        <label>Is GF Committed to Process? (DW)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                    <default>true</default>
                    <label>TBD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Private_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field copies the value of the standard &apos;IsPrivate&apos; field and should only be used for sharing private opportunities via Sharing Settings.

This is not intended to be displayed in the UI or used in reports.</description>
        <label>Is Private Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Submit_For_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Control Point Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_an_Embedded_Memory_Opportunity__c</fullName>
        <label>Is this an Embedded Memory Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>eFlash</fullName>
                </value>
                <value>
                    <fullName>eMRAM</fullName>
                </value>
                <value>
                    <fullName>SIP Flash</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>FeFET</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>OTP</fullName>
                </value>
                <value>
                    <fullName>MTP</fullName>
                </value>
                <value>
                    <fullName>eFuse</fullName>
                </value>
                <value>
                    <fullName>RRAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Status__c</fullName>
        <formula>IF (CONTAINS (TEXT (Worst_Issue_Status__c), &quot;G -&quot;), IMAGE (&quot;/resource/Dot_G&quot;,&quot;&quot;,30,28), 
IF (CONTAINS (TEXT(Worst_Issue_Status__c), &quot;Y -&quot;), IMAGE (&quot;/resource/Dot_Y&quot;,&quot;&quot;,30,28), 
IF (CONTAINS (TEXT (Worst_Issue_Status__c), &quot;R1 -&quot;), IMAGE (&quot;/resource/Dot_R1&quot;,&quot;&quot;,28,30), 
IF (CONTAINS (TEXT (Worst_Issue_Status__c), &quot;R2 -&quot;), IMAGE (&quot;/resource/Dot_R2&quot;,&quot;&quot;,28,30), 
IF (CONTAINS (TEXT (Worst_Issue_Status__c), &quot;R3 -&quot;), IMAGE (&quot;/resource/Dot_R3&quot;,&quot;&quot;,28,30), 
IF (CONTAINS (TEXT (Worst_Issue_Status__c), &quot;B -&quot;), IMAGE (&quot;/resource/Dot_B&quot;,&quot;&quot;,30,28),&quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of Opportunity bases up Worst Issue Status.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTR_Rev_M__c</fullName>
        <formula>Total_Lifetime_Revenue__c / 1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LTR Rev ($M)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LT_Wafer_Rollup__c</fullName>
        <label>LT Wafer Rollup</label>
        <summarizedField>Quarterly_Revenue_Object__c.Volume__c</summarizedField>
        <summaryForeignKey>Quarterly_Revenue_Object__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LT_Wafers_kwfr__c</fullName>
        <inlineHelpText>Total Wafers for the program</inlineHelpText>
        <label>LT Wafers (kwfr)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Editor_Of_IPDF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Storing the last modifier of Include PreDiscovery in Demand Forecast</description>
        <label>Last Editor Of IPDF</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lifetime_Volume__c</fullName>
        <label>Lifetime Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_End_Vol__c</fullName>
        <label>Low End Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPW_Requested_by_Customer__c</fullName>
        <description>Case No. 1706 : New opportunity field - MPW Requested by Customer</description>
        <inlineHelpText>Please select all MPWs planned by customer</inlineHelpText>
        <label>MPW Requested by Customer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013 August</fullName>
                </value>
                <value>
                    <fullName>2013 September</fullName>
                </value>
                <value>
                    <fullName>2013 October</fullName>
                </value>
                <value>
                    <fullName>2013 November</fullName>
                </value>
                <value>
                    <fullName>2013 December</fullName>
                </value>
                <value>
                    <fullName>2014 January</fullName>
                </value>
                <value>
                    <fullName>2014 February</fullName>
                </value>
                <value>
                    <fullName>2014 March</fullName>
                </value>
                <value>
                    <fullName>2014 April</fullName>
                </value>
                <value>
                    <fullName>2014 May</fullName>
                </value>
                <value>
                    <fullName>2014 June</fullName>
                </value>
                <value>
                    <fullName>2014 July</fullName>
                </value>
                <value>
                    <fullName>2014 August</fullName>
                </value>
                <value>
                    <fullName>2014 September</fullName>
                </value>
                <value>
                    <fullName>2014 October</fullName>
                </value>
                <value>
                    <fullName>2014 November</fullName>
                </value>
                <value>
                    <fullName>2014 December</fullName>
                </value>
                <value>
                    <fullName>2015 January</fullName>
                </value>
                <value>
                    <fullName>2015 February</fullName>
                </value>
                <value>
                    <fullName>2015 March</fullName>
                </value>
                <value>
                    <fullName>2015 April</fullName>
                </value>
                <value>
                    <fullName>2015 May</fullName>
                </value>
                <value>
                    <fullName>2015 June</fullName>
                </value>
                <value>
                    <fullName>2015 July</fullName>
                </value>
                <value>
                    <fullName>2015 August</fullName>
                </value>
                <value>
                    <fullName>2015 September</fullName>
                </value>
                <value>
                    <fullName>2015 October</fullName>
                </value>
                <value>
                    <fullName>2015 November</fullName>
                </value>
                <value>
                    <fullName>2015 December</fullName>
                </value>
                <value>
                    <fullName>2016 January</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketSegment_CP1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Market Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketSegment_CP2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seg Mktg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketSegment_CP3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seg Mktg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Segment_2__c</fullName>
        <description>Field created to store IBM information</description>
        <label>Market Segment 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment_3__c</fullName>
        <description>Field created to store IBM information</description>
        <label>Market Segment 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment_4__c</fullName>
        <description>Field created to store IBM information</description>
        <label>Market Segment 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Compute, Connect, Store (CCS)</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Industrial,Medical &amp;Scientific</fullName>
                </value>
                <value>
                    <fullName>Testchip</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment_last_modified_Date_CP2__c</fullName>
        <label>Market Segment last modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Segment_last_modified_Date_CP3__c</fullName>
        <label>Market Segment last modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Segment_last_modified_by_CP2__c</fullName>
        <label>Market Segment last modified by</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment_last_modified_by_CP3__c</fullName>
        <label>Market Segment last modified by</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>